--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,6 +4,30 @@
     padding: 0px;
 }
 
+
+
+
+
+
+body{
+    font-family: "cocogoose2";
+    font-size: 1vw;
+}
+
+@font-face{
+
+    font-family: "cocogoose";
+    src: url('/fonts/Cocogoose_trial.otf');
+
+}
+
+@font-face{
+
+    font-family: "cocogoose2";
+    src: url('/fonts/Cocogoose Pro Thin-trial.ttf');
+
+}
+
 .bannerHome{
     background-image: url("../img/negociacao.jpg");
     width: 100%;
@@ -32,27 +56,24 @@
 }
 
 
-#capaBanner h2{
-    font-size: 2.5rem;
+.textHome{
+    display: flex;
+    width: 70%;
+    text-align: center;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    height: 49vh;
+}
+
+.textHome h2{
+    font-size: 3.2vw;
 }
 
 
-body{
-    font-family: "cocogoose2";
-}
+.textHome h4{
 
-@font-face{
-
-    font-family: "cocogoose";
-    src: url('/fonts/Cocogoose_trial.otf');
-
-}
-
-@font-face{
-
-    font-family: "cocogoose2";
-    src: url('/fonts/Cocogoose Pro Thin-trial.ttf');
-
+    font-size: 1.6vw;
 }
 
 
@@ -61,7 +82,7 @@ body{
     height: 46px;
     font-weight: bold;
     background-color: #dc354500;
-    margin-top: 56px;
+    margin-top: 26px;
     border: 2.5px solid #d11919;
     font-size: 1.1rem;
     color: #fff;
@@ -83,6 +104,12 @@ body{
 
 .homeTwo h3{
     color: #d11919;
+    
+}
+
+
+.homeTwo p{
+    color: #000000;
     
 }
 
